Fix spacing in "Path Operations"

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -50,7 +50,7 @@
     position: relative;
 }
 .left-column {
-    width:300px;
+    width:100%;
     overflow:auto;
     background-color:#252526;
     height: calc(100% - 28px);
@@ -106,6 +106,11 @@ div.hovered {
 }
 div.dragged {
     background-color:#094771;
+}
+
+.path-operations-grid {
+    display: grid;
+    grid-template-columns: 6fr 6fr 7fr;
 }
 
 /* Drawings */
